--- a/MMM-Blynk.css
+++ b/MMM-Blynk.css
@@ -2,9 +2,23 @@
  *
  * MMM-Blynk
  *
- * 
+ *
  * MIT Licensed.
  *
  * Custom here your css module
  *
  */
+
+.rcorners {
+
+    border-radius: 5px 15px;
+    border: 2px solid white;
+    padding: 10px;
+    width: 55px;
+    height: 55px;
+    margin: 10px;
+    font-size: 70%;
+    font-weight: bold;
+    text-align: center;
+
+  }
