--- a/MMM-Blynk.css
+++ b/MMM-Blynk.css
@@ -9,16 +9,35 @@
  *
  */
 
-.rcorners {
+.box {
 
     border-radius: 5px 15px;
-    border: 2px solid white;
+    border: 2px solid #4d4f37;
     padding: 10px;
-    width: 55px;
+    width: 65px;
     height: 55px;
     margin: 10px;
     font-size: 70%;
     font-weight: bold;
     text-align: center;
-
+    box-shadow: 5px 5px 5px #282828;
+    color: #e89d06;
   }
+
+.lcd {
+      border-radius: 5px;
+      border: 2px solid #4d4f37;
+      padding: 10px;
+      width: 70px;
+      height: 55px;
+      margin: 10px;
+      font-size: 70%;
+      font-weight: bold;
+      text-align: center;
+      color: #4286f4;
+      box-shadow: 5px 5px 5px #282828;
+  }
+.simple {
+      color:white;
+      font-size: 100%;
+}
