--- a/MMM-Blynk.css
+++ b/MMM-Blynk.css
@@ -41,3 +41,22 @@
       color:white;
       font-size: 100%;
 }
+
+.chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    border: 2px solid #4d4f37;
+    
+}
+
+.chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
